--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ button{
 
 .banner{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: url(../images/banner.jpg);
     background-size: cover;
     background-position: center top;
